# scientific-calculator

./: README.md  package-lock.json  setup_emscripten.ps1
app/: signup.tsx
app/api/auth/signup/: route.ts
app/api/calculator/: build.js  package-lock.json
app/api/history/: route.ts
app/components/: MatrixCalculator.tsx  ScientificCalculator.tsx
app/login/: page.tsx
app/matrix/: page.tsx
app/signup/: page.tsx
calculator/: README.md
calculator-web/: check-mongo.js  next.config.js
calculator-web/app/: layout.tsx  login.tsx  page.tsx
calculator-web/app/about/: page.tsx
calculator-web/app/api/calculator/: calculator.js  index.js  package.json
calculator-web/cpp/: calculator.cpp
calculator/calculator-web/: build.ps1  package.json
calculator/calculator-web/app/api/auth/login/: route.ts
calculator/calculator-web/app/api/calculator/: CMakeLists.txt  binding.gyp  calculator_bridge.cpp  route.ts
calculator/calculator-web/app/scientific/: page.tsx
calculator/calculator-web/cpp/: build_calculator.sh
calculator/calculator-web/models/: History.ts
cpp/: build.sh
lib/: mongodb.ts
models/: User.ts
